Jsoup_26/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Jsoup_26_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:12: error: package org.jsoup.nodes does not exist
import org.jsoup.nodes.Document;
                      ^
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:13: error: cannot find symbol
import org.jsoup.safety.Cleaner;
                       ^
  symbol:   class Cleaner
  location: package org.jsoup.safety
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:14: error: cannot find symbol
import org.jsoup.safety.Whitelist;
                       ^
  symbol:   class Whitelist
  location: package org.jsoup.safety
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:22: error: cannot find symbol
      Whitelist whitelist0 = Whitelist.basicWithImages();
      ^
  symbol:   class Whitelist
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:22: error: cannot find symbol
      Whitelist whitelist0 = Whitelist.basicWithImages();
                             ^
  symbol:   variable Whitelist
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:23: error: cannot find symbol
      Cleaner cleaner0 = new Cleaner(whitelist0);
      ^
  symbol:   class Cleaner
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:23: error: cannot find symbol
      Cleaner cleaner0 = new Cleaner(whitelist0);
                             ^
  symbol:   class Cleaner
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:24: error: cannot find symbol
      Document document0 = new Document("org.jsoup.safety.Cleaner");
      ^
  symbol:   class Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:24: error: cannot find symbol
      Document document0 = new Document("org.jsoup.safety.Cleaner");
                               ^
  symbol:   class Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:25: error: cannot find symbol
      Document document1 = cleaner0.clean(document0);
      ^
  symbol:   class Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:31: error: cannot find symbol
      Whitelist whitelist0 = Whitelist.basicWithImages();
      ^
  symbol:   class Whitelist
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:31: error: cannot find symbol
      Whitelist whitelist0 = Whitelist.basicWithImages();
                             ^
  symbol:   variable Whitelist
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:32: error: cannot find symbol
      Cleaner cleaner0 = new Cleaner(whitelist0);
      ^
  symbol:   class Cleaner
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:32: error: cannot find symbol
      Cleaner cleaner0 = new Cleaner(whitelist0);
                             ^
  symbol:   class Cleaner
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:33: error: cannot find symbol
      Document document0 = Document.createShell("org.jsoup.safety.Cleaner");
      ^
  symbol:   class Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:33: error: cannot find symbol
      Document document0 = Document.createShell("org.jsoup.safety.Cleaner");
                           ^
  symbol:   variable Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:34: error: cannot find symbol
      Document document1 = cleaner0.clean(document0);
      ^
  symbol:   class Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:40: error: cannot find symbol
      Whitelist whitelist0 = Whitelist.basicWithImages();
      ^
  symbol:   class Whitelist
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:40: error: cannot find symbol
      Whitelist whitelist0 = Whitelist.basicWithImages();
                             ^
  symbol:   variable Whitelist
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:41: error: cannot find symbol
      Document document0 = Document.createShell("");
      ^
  symbol:   class Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:41: error: cannot find symbol
      Document document0 = Document.createShell("");
                           ^
  symbol:   variable Document
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:43: error: cannot find symbol
      Cleaner cleaner0 = new Cleaner(whitelist0);
      ^
  symbol:   class Cleaner
  location: class Cleaner_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_26/Jsoup/evosuite/3/org/jsoup/safety/Cleaner_ESTest.java:43: error: cannot find symbol
      Cleaner cleaner0 = new Cleaner(whitelist0);
                             ^
  symbol:   class Cleaner
  location: class Cleaner_ESTest
23 errors
